components/fib-go/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: graphtuitous
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: fib-go
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elfib-go
  namespace: aaaa-studio
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-fib-go
    weight: null
status: {}
